--- a/Online Store/Modernform Online Store.html
+++ b/Online Store/Modernform Online Store.html
@@ -1,19 +1,3 @@
-<?php
-session_start(); // เริ่มต้น session เพื่อเก็บข้อมูลภาษา
-
-// ตรวจสอบว่ามีการเลือกภาษาใหม่หรือไม่
-if (isset($_POST['language'])) {
-   $_SESSION['language'] = $_POST['language']; // เก็บภาษาที่เลือกใน session
-   // แสดงข้อความแจ้งเตือน
-   echo "<p style='color: green;'>Language has been updated to " . $_POST['language'] . "</p>";
-} elseif (!isset($_SESSION['language'])) {
-   $_SESSION['language'] = 'en'; // กำหนดค่าเริ่มต้นเป็นภาษาอังกฤษ
-}
-
-// ใช้ภาษาที่เก็บใน session
-$language = $_SESSION['language'];
-?>
-
 <!DOCTYPE html>
 <html lang="th">
 
@@ -211,16 +195,28 @@ $language = $_SESSION['language'];
       <!-- แถวเมนูออฟฟิศ -->
       <div class="character">
          <h2>office</h2>
-         <p>0000 รายการ</p>
+         <p>0 รายการ</p>
       </div>
-      <!-- เมนูย้อย -->
       <div class="Retro-Menu">
          <p>Gaming</p>
          <p class="workspace-menu">Workspace <span class="material-icons">keyboard_arrow_down</span></p>
+         <!-- เมนูย่อยของ Workspace -->
          <div class="Workspace-submenu">
-            <p>Desk</p>
-            <p>Chair</p>
-            <p>Panel</p>
+            <p class="desk-menu">Desk <span class="material-icons">keyboard_arrow_down</span></p> <!-- เมนู Desk -->
+            <div class="Desk-submenu"> <!-- เมนูย่อย Desk -->
+               <p>Desk System</p>
+               <p>Height adjust table</p>
+               <p>Bench Work</p>
+            </div>
+         <p class="chair-menu">Chair <span class="material-icons">keyboard_arrow_down</span></p>
+         <!-- เมนูย่อยของ Chair -->
+         <div class="Chair-submenu">
+            <p>Office</p>
+            <p>Executive</p>
+            <p>Occasional</p>
+            <p>Ergonomic</p>
+         </div>
+         <p>Panel</p>
          </div>
          <p>Executive<span class="material-icons">keyboard_arrow_down</span></p>
          <p>Meeting & Conference<span class="material-icons">keyboard_arrow_down</span></p>
