Save the image. Loading to the main page.

--- a/Online Store/Modernform Online Store.html
+++ b/Online Store/Modernform Online Store.html
@@ -245,10 +245,10 @@
          <!-- เมนูหลัก Lounge area -->
          <p class="Main-menu">Lounge area <span class="material-icons">keyboard_arrow_down</span></p>
          <div class="Main-menu-submenu">
-            <p class="menu">Office</p>
-            <p class="menu">Executive</p>
-            <p class="menu">Occasional</p>
-            <p class="menu">Ergonomic</p>
+            <p class="menu">Sofa</p>
+            <p class="menu">Lounge chair</p>
+            <p class="menu">Coffee table</p>
+            <p class="menu">Row seat</p>
          </div>
       
          <!-- เมนูหลัก Collaboration space -->
@@ -256,7 +256,6 @@
          <div class="Main-menu-submenu">
             <p class="menu">Table <span class="material-icons">keyboard_arrow_down</span></p>
             <div class="submenu">
-               <p>Table</p>
                <p>Bench</p>
             </div>
             <p class="menu">Seating <span class="material-icons">keyboard_arrow_down</span></p>
@@ -286,8 +285,9 @@
          <!-- เมนูหลัก Modernform x PDM -->
          <p class="Main-menu">Modernform x PDM</p>
       </div>
-
    </div>
+
+   <!-- รูปภาพที่ของสิ้นค้า -->
    
    <!-- แถบ Store Location & Contact Us & Support -->
    <div class="Setup">
