All the pictures can be displayed now.

--- a/Online Store/Modernform Online Store.html
+++ b/Online Store/Modernform Online Store.html
@@ -288,6 +288,7 @@
    </div>
 
    <!-- รูปภาพที่ของสิ้นค้า -->
+   <div class="gallery" id="gallery"></div>
    
    <!-- แถบ Store Location & Contact Us & Support -->
    <div class="Setup">
