Page division and page assignment

--- a/Online Store/Modernform Online Store.html
+++ b/Online Store/Modernform Online Store.html
@@ -287,6 +287,7 @@
          <!-- รูปภาพของสินค้า -->
          <div id="gallery" class="gallery"></div>
       </div>
+      <div id="pagination" class="pagination"></div>
 
       <!-- แถบ Store Location & Contact Us & Support -->
       <div class="Setup">
