Home page is complete.

--- a/Online Store/Steelcase/Steelcase.html
+++ b/Online Store/Steelcase/Steelcase.html
@@ -32,7 +32,7 @@
                      <div class="products-container">
                         <!-- Office -->
                         <div class="product-item">
-                           <img src="./img/Products/office.png" />
+                           <img src="./img/office Logo/office.png" />
                               <div class="product-text">
                                  <h2>Office</h2>
                                  <div class="product-details">
@@ -53,7 +53,7 @@
 
                         <!-- Steelcase -->
                         <div class="product-item">
-                           <img src="./img/Products/Steelcase.png" />
+                           <img src="./img/office Logo/Steelcase.png" />
                            <div class="product-text">
                               <h2>STEELCASE</h2>
                               <div class="product-details">
@@ -69,7 +69,7 @@
 
                      <!-- Home -->
                      <div class="product-item">
-                        <img src="./img/Products/Home.png" />
+                        <img src="./img/office Logo/Home.png" />
                         <div class="product-text">
                            <h2>Home</h2>
                            <div class="product-details">
@@ -83,7 +83,7 @@
 
                      <!-- Kitchen -->
                      <div class="product-item">
-                        <img src="./img/Products/KITCHEN .png" />
+                        <img src="./img/office Logo/KITCHEN .png" />
                         <div class="product-text">
                            <h2>KITCHEN</h2>
                            <div class="product-details">
@@ -96,7 +96,7 @@
 
                      <!-- Walk-in Closet & Storage -->
                      <div class="product-item">
-                        <img src="./img/Products/WALK-IN CLOSET & STORAGE.png" />
+                        <img src="./img/office Logo/WALK-IN CLOSET & STORAGE.png" />
                         <div class="product-text">
                            <h2>WALK-IN CLOSET & STORAGE</h2>
                            <div class="product-details">
@@ -111,7 +111,7 @@
 
                      <!-- Hardware & Fitting -->
                      <div class="product-item">
-                        <img src="./img/Products/HARDWARE & FITTING .png" />
+                        <img src="./img/office Logo/HARDWARE & FITTING .png" />
                         <div class="product-text">
                            <h2>HARDWARE & FITTING</h2>
                            <div class="product-details">
@@ -138,12 +138,12 @@
             <ul id="languageMenu" class="languageMenu" style="display: none">
                <li>
                   <button onclick="selectLanguage('Th')" data-lang="Th" data-full-text="Th - ภาษาไทย">
-                     <img src="./img/National flag/Th.png" alt="Thai Icon" class="icon"/>Th - ภาษาไทย
+                     <img src="img/Products/Th.png" alt="Thai Icon" class="icon"/>Th - ภาษาไทย
                   </button>
                </li>
                <li>
                   <button onclick="selectLanguage('En')" data-lang="En" data-full-text="En - English">
-                     <img src="./img/National flag/En.png" alt="English Icon" class="icon"/>En - English
+                     <img src="img/Products/En.png" alt="English Icon" class="icon"/>En - English
                   </button>
                </li>
             </ul>
@@ -181,24 +181,19 @@
                <p id="itemCount">0 รายการ</p>
             </div>
             <div id="product-list" class="Retro-Menu">
-               <!-- เมนูหลัก Ergonomic chair -->
-               <p class="Main-menu" data-category="Gaming">Ergonomic chair</p>
-               <!-- เมนูหลัก Adjustable desk -->
-               <p class="Main-menu" data-category="Workspace">Adjustable desk</p>
-               <!-- เมนูหลัก Working accessories -->
-               <p class="Main-menu" data-category="Executive">Working accessories</p>
-               <!-- เมนูหลัก Worklounge -->
-               <p class="Main-menu" data-category="Meeting & Conference">Worklounge</p>
-               <!-- เมนูหลัก Occasional chairs -->
-               <p class="Main-menu" data-category="Lounge area">Occasional chairs</p>
-               <!-- เมนูหลัก Storage -->
-               <p class="Main-menu" data-category="Collaboration space">Storage</p>
+               <p class="Main-menu" data-category="Ergonomic chair">Ergonomic chair</p>
+               <p class="Main-menu" data-category="Adjustable desk">Adjustable desk</p>
+               <p class="Main-menu" data-category="Working accessories">Working accessories</p>
+               <p class="Main-menu" data-category="Worklounge">Worklounge</p>
+               <p class="Main-menu" data-category="Occasional chairs">Occasional chairs</p>
+               <p class="Main-menu" data-category="Storage">Storage</p>
             </div>
          </div>
 
          <!-- รูปภาพของสินค้า -->
          <div id="gallery" class="gallery"></div>
       </div>
+
       <div id="pagination" class="pagination"></div>
 
       <!-- แถบ Store Location & Contact Us & Support -->
