--- a/PET COLLECTION/CHATEAU/CHATEAU.html
+++ b/PET COLLECTION/CHATEAU/CHATEAU.html
@@ -196,7 +196,7 @@
                <div class="description">
                   <p>Experience the ultimate comfort with a touch of luxury and classic contemporary style. Our quality furniture, boasting a history of over 75 years, is designed and produced entirely in Italy.</p>
                </div>
-               <button id="newButton">View Product</button>
+               <button id="storeButton">View Product</button>
             </div>
          </div>
 
